card of product is completed

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -9,26 +9,170 @@
     <meta name="MobileOptimized" content="width">
 
     <title>Тестовое задание Frontend-developer</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="goods">
-            <section class="card-product">
-                <div class="card-product__image"></div>
-                <a href="link-to-product" class="card-product__link">
-                    <h2 class="card-product__header">Болгарка Минск МШМ-125/1350</h2>
-                </a>
-                <p class="card-product__description">Производитель: Минск
-                    Мощность: 1350Вт
-                    Диаметр круга: 125мм
-                    Частота вращения: 11000об/мин.
-                    Вес: 2,6кг</p>
-                <footer class="card-product__footer">
-                    <span class="card-product__price">3270890 руб.</span>
-                    <button class="card-product_buy-button">Купить</button>
-                </footer>
-            </section>
-        </div>
+      <div class="goods">
+        <section class="card-product">
+          <div class="card-product__image"></div>
+          <h2 class="card-product__header">
+            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+          </h2>
+          <p class="card-product__description">Производитель: Минск
+            Мощность: 1350Вт
+            Диаметр круга: 125мм
+            Частота вращения: 11000об/мин.
+            Вес: 2,6кг</p>
+          <footer class="card-product__footer">
+            <span class="card-product__price">3270890 руб.</span>
+            <button class="card-product_buy-button">Купить</button>
+          </footer>
+        </section>
+
+        <section class="card-product">
+          <div class="card-product__image"></div>
+          <h2 class="card-product__header">
+            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+          </h2>
+          <p class="card-product__description">Производитель: Минск
+            Мощность: 1350Вт
+            Диаметр круга: 125мм
+            Частота вращения: 11000об/мин.
+            Вес: 2,6кг</p>
+          <footer class="card-product__footer">
+            <span class="card-product__price">3270890 руб.</span>
+            <button class="card-product_buy-button">Купить</button>
+          </footer>
+        </section>
+
+        <section class="card-product">
+          <div class="card-product__image"></div>
+          <h2 class="card-product__header">
+            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+          </h2>
+          <p class="card-product__description">Производитель: Минск
+            Мощность: 1350Вт
+            Диаметр круга: 125мм
+            Частота вращения: 11000об/мин.
+            Вес: 2,6кг</p>
+          <footer class="card-product__footer">
+            <span class="card-product__price">3270890 руб.</span>
+            <button class="card-product_buy-button">Купить</button>
+          </footer>
+        </section>
+
+        <section class="card-product">
+          <div class="card-product__image"></div>
+          <h2 class="card-product__header">
+            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+          </h2>
+          <p class="card-product__description">Производитель: Минск
+            Мощность: 1350Вт
+            Диаметр круга: 125мм
+            Частота вращения: 11000об/мин.
+            Вес: 2,6кг</p>
+          <footer class="card-product__footer">
+            <span class="card-product__price">3270890 руб.</span>
+            <button class="card-product_buy-button">Купить</button>
+          </footer>
+        </section>
+
+        <section class="card-product">
+          <div class="card-product__image"></div>
+          <h2 class="card-product__header">
+            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+          </h2>
+          <p class="card-product__description">Производитель: Минск
+            Мощность: 1350Вт
+            Диаметр круга: 125мм
+            Частота вращения: 11000об/мин.
+            Вес: 2,6кг</p>
+          <footer class="card-product__footer">
+            <span class="card-product__price">3270890 руб.</span>
+            <button class="card-product_buy-button">Купить</button>
+          </footer>
+        </section>
+
+        <section class="card-product">
+          <div class="card-product__image"></div>
+          <h2 class="card-product__header">
+            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+          </h2>
+          <p class="card-product__description">Производитель: Минск
+            Мощность: 1350Вт
+            Диаметр круга: 125мм
+            Частота вращения: 11000об/мин.
+            Вес: 2,6кг</p>
+          <footer class="card-product__footer">
+            <span class="card-product__price">3270890 руб.</span>
+            <button class="card-product_buy-button">Купить</button>
+          </footer>
+        </section>
+
+        <section class="card-product">
+          <div class="card-product__image"></div>
+          <h2 class="card-product__header">
+            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+          </h2>
+          <p class="card-product__description">Производитель: Минск
+            Мощность: 1350Вт
+            Диаметр круга: 125мм
+            Частота вращения: 11000об/мин.
+            Вес: 2,6кг</p>
+          <footer class="card-product__footer">
+            <span class="card-product__price">3270890 руб.</span>
+            <button class="card-product_buy-button">Купить</button>
+          </footer>
+        </section>
+
+        <section class="card-product">
+          <div class="card-product__image"></div>
+          <h2 class="card-product__header">
+            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+          </h2>
+          <p class="card-product__description">Производитель: Минск
+            Мощность: 1350Вт
+            Диаметр круга: 125мм
+            Частота вращения: 11000об/мин.
+            Вес: 2,6кг</p>
+          <footer class="card-product__footer">
+            <span class="card-product__price">3270890 руб.</span>
+            <button class="card-product_buy-button">Купить</button>
+          </footer>
+        </section>
+
+        <section class="card-product">
+          <div class="card-product__image"></div>
+          <h2 class="card-product__header">
+            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+          </h2>
+          <p class="card-product__description">Производитель: Минск
+            Мощность: 1350Вт
+            Диаметр круга: 125мм
+            Частота вращения: 11000об/мин.
+            Вес: 2,6кг</p>
+          <footer class="card-product__footer">
+            <span class="card-product__price">3270890 руб.</span>
+            <button class="card-product_buy-button">Купить</button>
+          </footer>
+        </section>
+
+        <section class="card-product">
+          <div class="card-product__image"></div>
+          <h2 class="card-product__header">
+            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+          </h2>
+          <p class="card-product__description">Производитель: Минск
+            Мощность: 1350Вт
+            Диаметр круга: 125мм
+            Частота вращения: 11000об/мин.
+            Вес: 2,6кг</p>
+          <footer class="card-product__footer">
+            <span class="card-product__price">3270890 руб.</span>
+            <button class="card-product_buy-button">Купить</button>
+          </footer>
+        </section>
+      </div>
     </div>
-</body>
+  </body>
 </html>
