ghost nav menu completed

--- a/src/index.html
+++ b/src/index.html
@@ -11,168 +11,203 @@
     <title>Тестовое задание Frontend-developer</title>
   </head>
   <body>
+    <div class="ghost-menu">
+      <div id="ghost-menu__nav" class="ghost-menu__nav">
+        <nav class="nav-menu">
+          <ul class="main-menu">
+            <li class="main-menu__item">
+              <a href="link_to_menu" class="main-menu__link">Каталог оборудования</a>
+
+              <ul id="menu" class="menu">
+                <li class="menu__item">
+                  <a href="link_to_menu" class="menu__link">1 уровень</a>
+
+                  <div class="menu__extra">
+                    <ul class="extra-menu level-2"> <!--extra-menu level 2-->
+                      <li class="extra-menu__item">
+                        <a href="link" class="extra-menu__link">2 уровень</a>
+
+                        <ul class="extra-menu level-3"> <!--extra-menu level 3-->
+                          <li class="extra-menu__item">
+                            <a href="link" class="extra-menu__link">3 уровень</a>
+
+                            <ul class="extra-menu level-4"> <!--extra-menu level 4-->
+                              <li class="extra-menu__item">
+                                <a href="link" class="extra-menu__link">4 уровень</a>
+                              </li>
+
+                              <li class="extra-menu__item">
+                                <a href="link" class="extra-menu__link">4 уровень</a>
+                              </li>
+
+                              <li class="extra-menu__item">
+                                <a href="link" class="extra-menu__link">4 уровень</a>
+                              </li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul> <!--end of first extra-menu-->
+                  </div>
+                </li>
+
+                <li class="menu__item">
+                  <a href="link_to_menu" class="menu__link">1 уровень</a>
+
+                  <div class="menu__extra">
+                    <ul class="extra-menu"> <!--extra-menu level 2-->
+                      <li class="extra-menu__item">
+                        <a href="link" class="extra-menu__link">2 уровень</a>
+
+                        <ul class="extra-menu"> <!--extra-menu level 3-->
+                          <li class="extra-menu__item">
+                            <a href="link" class="extra-menu__link">3 уровень</a>
+
+                            <ul class="extra-menu"> <!--extra-menu level 4-->
+                              <li class="extra-menu__item">
+                                <a href="link" class="extra-menu__link">4 уровень</a>
+                              </li>
+
+                              <li class="extra-menu__item">
+                                <a href="link" class="extra-menu__link">4 уровень</a>
+                              </li>
+
+                              <li class="extra-menu__item">
+                                <a href="link" class="extra-menu__link">4 уровень</a>
+                              </li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul> <!--end of first extra-menu-->
+                  </div>
+                </li>
+
+                <li class="menu__item">
+                  <a href="link_to_menu" class="menu__link">1 уровень</a>
+
+                  <div class="menu__extra">
+                    <ul class="extra-menu"> <!--extra-menu level 2-->
+                      <li class="extra-menu__item">
+                        <a href="link" class="extra-menu__link">2 уровень</a>
+
+                        <ul class="extra-menu"> <!--extra-menu level 3-->
+                          <li class="extra-menu__item">
+                            <a href="link" class="extra-menu__link">3 уровень</a>
+
+                            <ul class="extra-menu"> <!--extra-menu level 4-->
+                              <li class="extra-menu__item">
+                                <a href="link" class="extra-menu__link">4 уровень</a>
+                              </li>
+
+                              <li class="extra-menu__item">
+                                <a href="link" class="extra-menu__link">4 уровень</a>
+                              </li>
+
+                              <li class="extra-menu__item">
+                                <a href="link" class="extra-menu__link">4 уровень</a>
+                              </li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul> <!--end of first extra-menu-->
+                  </div>
+                </li>
+
+                <li class="menu__item">
+                  <a href="link_to_menu" class="menu__link">1 уровень</a>
+
+                  <div class="menu__extra">
+                    <ul class="extra-menu"> <!--extra-menu level 2-->
+                      <li class="extra-menu__item">
+                        <a href="link" class="extra-menu__link">2 уровень</a>
+
+                        <ul class="extra-menu"> <!--extra-menu level 3-->
+                          <li class="extra-menu__item">
+                            <a href="link" class="extra-menu__link">3 уровень</a>
+
+                            <ul class="extra-menu"> <!--extra-menu level 4-->
+                              <li class="extra-menu__item">
+                                <a href="link" class="extra-menu__link">4 уровень</a>
+                              </li>
+
+                              <li class="extra-menu__item">
+                                <a href="link" class="extra-menu__link">4 уровень</a>
+                              </li>
+
+                              <li class="extra-menu__item">
+                                <a href="link" class="extra-menu__link">4 уровень</a>
+                              </li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul> <!--end of first extra-menu-->
+                  </div>
+                </li>
+
+                <li class="menu__item">
+                  <a href="link_to_menu" class="menu__link">1 уровень</a>
+
+                  <div class="menu__extra">
+                    <ul class="extra-menu"> <!--extra-menu level 2-->
+                      <li class="extra-menu__item">
+                        <a href="link" class="extra-menu__link">2 уровень</a>
+
+                        <ul class="extra-menu"> <!--extra-menu level 3-->
+                          <li class="extra-menu__item">
+                            <a href="link" class="extra-menu__link">3 уровень</a>
+
+                            <ul class="extra-menu"> <!--extra-menu level 4-->
+                              <li class="extra-menu__item">
+                                <a href="link" class="extra-menu__link">4 уровень</a>
+                              </li>
+
+                              <li class="extra-menu__item">
+                                <a href="link" class="extra-menu__link">4 уровень</a>
+                              </li>
+
+                              <li class="extra-menu__item">
+                                <a href="link" class="extra-menu__link">4 уровень</a>
+                              </li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul> <!--end of first extra-menu-->
+                  </div>
+                </li>
+              </ul> <!--end of menu-->
+            </li>
+          </ul> <!--end of main-menu-->
+
+        </nav>
+      </div>
+      <div class="ghost-menu__view-tables"></div>
+    </div>
+
     <div class="container">
       <div class="goods">
-        <section class="card-product">
-          <div class="card-product__image"></div>
-          <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
-          </h2>
-          <p class="card-product__description">Производитель: Минск
-            Мощность: 1350Вт
-            Диаметр круга: 125мм
-            Частота вращения: 11000об/мин.
-            Вес: 2,6кг</p>
-          <footer class="card-product__footer">
-            <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product_buy-button">Купить</button>
-          </footer>
-        </section>
 
         <section class="card-product">
           <div class="card-product__image"></div>
           <h2 class="card-product__header">
             <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
           </h2>
-          <p class="card-product__description">Производитель: Минск
-            Мощность: 1350Вт
-            Диаметр круга: 125мм
-            Частота вращения: 11000об/мин.
-            Вес: 2,6кг</p>
+          <p class="card-product__description">
+            <span class="card-product__specifications">Производитель: Минск</span>
+            <span class="card-product__specifications">Мощность: 1350Вт</span>
+            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
+            <span class="card-product__specifications">Вес: 2,6кг</span>
+          </p>
           <footer class="card-product__footer">
             <span class="card-product__price">3270890 руб.</span>
             <button class="card-product_buy-button">Купить</button>
           </footer>
         </section>
 
-        <section class="card-product">
-          <div class="card-product__image"></div>
-          <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
-          </h2>
-          <p class="card-product__description">Производитель: Минск
-            Мощность: 1350Вт
-            Диаметр круга: 125мм
-            Частота вращения: 11000об/мин.
-            Вес: 2,6кг</p>
-          <footer class="card-product__footer">
-            <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product_buy-button">Купить</button>
-          </footer>
-        </section>
-
-        <section class="card-product">
-          <div class="card-product__image"></div>
-          <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
-          </h2>
-          <p class="card-product__description">Производитель: Минск
-            Мощность: 1350Вт
-            Диаметр круга: 125мм
-            Частота вращения: 11000об/мин.
-            Вес: 2,6кг</p>
-          <footer class="card-product__footer">
-            <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product_buy-button">Купить</button>
-          </footer>
-        </section>
-
-        <section class="card-product">
-          <div class="card-product__image"></div>
-          <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
-          </h2>
-          <p class="card-product__description">Производитель: Минск
-            Мощность: 1350Вт
-            Диаметр круга: 125мм
-            Частота вращения: 11000об/мин.
-            Вес: 2,6кг</p>
-          <footer class="card-product__footer">
-            <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product_buy-button">Купить</button>
-          </footer>
-        </section>
-
-        <section class="card-product">
-          <div class="card-product__image"></div>
-          <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
-          </h2>
-          <p class="card-product__description">Производитель: Минск
-            Мощность: 1350Вт
-            Диаметр круга: 125мм
-            Частота вращения: 11000об/мин.
-            Вес: 2,6кг</p>
-          <footer class="card-product__footer">
-            <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product_buy-button">Купить</button>
-          </footer>
-        </section>
-
-        <section class="card-product">
-          <div class="card-product__image"></div>
-          <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
-          </h2>
-          <p class="card-product__description">Производитель: Минск
-            Мощность: 1350Вт
-            Диаметр круга: 125мм
-            Частота вращения: 11000об/мин.
-            Вес: 2,6кг</p>
-          <footer class="card-product__footer">
-            <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product_buy-button">Купить</button>
-          </footer>
-        </section>
-
-        <section class="card-product">
-          <div class="card-product__image"></div>
-          <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
-          </h2>
-          <p class="card-product__description">Производитель: Минск
-            Мощность: 1350Вт
-            Диаметр круга: 125мм
-            Частота вращения: 11000об/мин.
-            Вес: 2,6кг</p>
-          <footer class="card-product__footer">
-            <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product_buy-button">Купить</button>
-          </footer>
-        </section>
-
-        <section class="card-product">
-          <div class="card-product__image"></div>
-          <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
-          </h2>
-          <p class="card-product__description">Производитель: Минск
-            Мощность: 1350Вт
-            Диаметр круга: 125мм
-            Частота вращения: 11000об/мин.
-            Вес: 2,6кг</p>
-          <footer class="card-product__footer">
-            <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product_buy-button">Купить</button>
-          </footer>
-        </section>
-
-        <section class="card-product">
-          <div class="card-product__image"></div>
-          <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
-          </h2>
-          <p class="card-product__description">Производитель: Минск
-            Мощность: 1350Вт
-            Диаметр круга: 125мм
-            Частота вращения: 11000об/мин.
-            Вес: 2,6кг</p>
-          <footer class="card-product__footer">
-            <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product_buy-button">Купить</button>
-          </footer>
-        </section>
-      </div>
-    </div>
+      </div> <!--end of goods-->
+    </div> <!--end of container-->
   </body>
 </html>
