fixed nav menu for mobile version

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <div class="ghost-menu">
       <div id="ghost-menu__nav" class="ghost-menu__nav">
         <nav class="nav-menu">
+
           <ul class="main-menu">
             <li class="main-menu__item">
               <a href="link_to_menu" class="main-menu__link">Каталог оборудования</a>
@@ -190,7 +191,7 @@
     <div class="container">
       <div class="goods">
 
-        <section class="card-product">
+        <section class="card-product card-product_theme_table-view">
           <div class="card-product__image"></div>
           <h2 class="card-product__header">
             <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
