table view of product cards completed

--- a/src/index.html
+++ b/src/index.html
@@ -185,13 +185,13 @@
 
         </nav>
       </div>
-      <div class="ghost-menu__view-tables"></div>
+      <div id="ghost-menu__view-tables" class="ghost-menu__view-tables"></div>
     </div>
 
     <div class="container">
       <div class="goods">
 
-        <section class="card-product card-product_theme_table-view">
+        <section class="card-product">
           <div class="card-product__image"></div>
           <h2 class="card-product__header">
             <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
@@ -206,7 +206,245 @@
             <span class="card-product__price">3270890 руб.</span>
             <button class="card-product_buy-button">Купить</button>
           </footer>
-        </section>
+        </section> <!--end of card-product-->
+
+        <section class="card-product">
+          <div class="card-product__image"></div>
+          <h2 class="card-product__header">
+            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+          </h2>
+          <p class="card-product__description">
+            <span class="card-product__specifications">Производитель: Минск</span>
+            <span class="card-product__specifications">Мощность: 1350Вт</span>
+            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
+            <span class="card-product__specifications">Вес: 2,6кг</span>
+          </p>
+          <footer class="card-product__footer">
+            <span class="card-product__price">3270890 руб.</span>
+            <button class="card-product_buy-button">Купить</button>
+          </footer>
+        </section> <!--end of card-product-->
+
+        <section class="card-product">
+          <div class="card-product__image"></div>
+          <h2 class="card-product__header">
+            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+          </h2>
+          <p class="card-product__description">
+            <span class="card-product__specifications">Производитель: Минск</span>
+            <span class="card-product__specifications">Мощность: 1350Вт</span>
+            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
+            <span class="card-product__specifications">Вес: 2,6кг</span>
+          </p>
+          <footer class="card-product__footer">
+            <span class="card-product__price">3270890 руб.</span>
+            <button class="card-product_buy-button">Купить</button>
+          </footer>
+        </section> <!--end of card-product-->
+
+        <section class="card-product">
+          <div class="card-product__image"></div>
+          <h2 class="card-product__header">
+            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+          </h2>
+          <p class="card-product__description">
+            <span class="card-product__specifications">Производитель: Минск</span>
+            <span class="card-product__specifications">Мощность: 1350Вт</span>
+            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
+            <span class="card-product__specifications">Вес: 2,6кг</span>
+          </p>
+          <footer class="card-product__footer">
+            <span class="card-product__price">3270890 руб.</span>
+            <button class="card-product_buy-button">Купить</button>
+          </footer>
+        </section> <!--end of card-product-->
+
+        <section class="card-product">
+          <div class="card-product__image"></div>
+          <h2 class="card-product__header">
+            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+          </h2>
+          <p class="card-product__description">
+            <span class="card-product__specifications">Производитель: Минск</span>
+            <span class="card-product__specifications">Мощность: 1350Вт</span>
+            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
+            <span class="card-product__specifications">Вес: 2,6кг</span>
+          </p>
+          <footer class="card-product__footer">
+            <span class="card-product__price">3270890 руб.</span>
+            <button class="card-product_buy-button">Купить</button>
+          </footer>
+        </section> <!--end of card-product-->
+
+        <section class="card-product">
+          <div class="card-product__image"></div>
+          <h2 class="card-product__header">
+            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+          </h2>
+          <p class="card-product__description">
+            <span class="card-product__specifications">Производитель: Минск</span>
+            <span class="card-product__specifications">Мощность: 1350Вт</span>
+            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
+            <span class="card-product__specifications">Вес: 2,6кг</span>
+          </p>
+          <footer class="card-product__footer">
+            <span class="card-product__price">3270890 руб.</span>
+            <button class="card-product_buy-button">Купить</button>
+          </footer>
+        </section> <!--end of card-product-->
+
+        <section class="card-product">
+          <div class="card-product__image"></div>
+          <h2 class="card-product__header">
+            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+          </h2>
+          <p class="card-product__description">
+            <span class="card-product__specifications">Производитель: Минск</span>
+            <span class="card-product__specifications">Мощность: 1350Вт</span>
+            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
+            <span class="card-product__specifications">Вес: 2,6кг</span>
+          </p>
+          <footer class="card-product__footer">
+            <span class="card-product__price">3270890 руб.</span>
+            <button class="card-product_buy-button">Купить</button>
+          </footer>
+        </section> <!--end of card-product-->
+
+        <section class="card-product">
+          <div class="card-product__image"></div>
+          <h2 class="card-product__header">
+            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+          </h2>
+          <p class="card-product__description">
+            <span class="card-product__specifications">Производитель: Минск</span>
+            <span class="card-product__specifications">Мощность: 1350Вт</span>
+            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
+            <span class="card-product__specifications">Вес: 2,6кг</span>
+          </p>
+          <footer class="card-product__footer">
+            <span class="card-product__price">3270890 руб.</span>
+            <button class="card-product_buy-button">Купить</button>
+          </footer>
+        </section> <!--end of card-product-->
+
+        <section class="card-product">
+          <div class="card-product__image"></div>
+          <h2 class="card-product__header">
+            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+          </h2>
+          <p class="card-product__description">
+            <span class="card-product__specifications">Производитель: Минск</span>
+            <span class="card-product__specifications">Мощность: 1350Вт</span>
+            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
+            <span class="card-product__specifications">Вес: 2,6кг</span>
+          </p>
+          <footer class="card-product__footer">
+            <span class="card-product__price">3270890 руб.</span>
+            <button class="card-product_buy-button">Купить</button>
+          </footer>
+        </section> <!--end of card-product-->
+
+        <section class="card-product">
+          <div class="card-product__image"></div>
+          <h2 class="card-product__header">
+            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+          </h2>
+          <p class="card-product__description">
+            <span class="card-product__specifications">Производитель: Минск</span>
+            <span class="card-product__specifications">Мощность: 1350Вт</span>
+            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
+            <span class="card-product__specifications">Вес: 2,6кг</span>
+          </p>
+          <footer class="card-product__footer">
+            <span class="card-product__price">3270890 руб.</span>
+            <button class="card-product_buy-button">Купить</button>
+          </footer>
+        </section> <!--end of card-product-->
+
+        <section class="card-product">
+          <div class="card-product__image"></div>
+          <h2 class="card-product__header">
+            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+          </h2>
+          <p class="card-product__description">
+            <span class="card-product__specifications">Производитель: Минск</span>
+            <span class="card-product__specifications">Мощность: 1350Вт</span>
+            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
+            <span class="card-product__specifications">Вес: 2,6кг</span>
+          </p>
+          <footer class="card-product__footer">
+            <span class="card-product__price">3270890 руб.</span>
+            <button class="card-product_buy-button">Купить</button>
+          </footer>
+        </section> <!--end of card-product-->
+
+        <section class="card-product">
+          <div class="card-product__image"></div>
+          <h2 class="card-product__header">
+            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+          </h2>
+          <p class="card-product__description">
+            <span class="card-product__specifications">Производитель: Минск</span>
+            <span class="card-product__specifications">Мощность: 1350Вт</span>
+            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
+            <span class="card-product__specifications">Вес: 2,6кг</span>
+          </p>
+          <footer class="card-product__footer">
+            <span class="card-product__price">3270890 руб.</span>
+            <button class="card-product_buy-button">Купить</button>
+          </footer>
+        </section> <!--end of card-product-->
+
+        <section class="card-product">
+          <div class="card-product__image"></div>
+          <h2 class="card-product__header">
+            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+          </h2>
+          <p class="card-product__description">
+            <span class="card-product__specifications">Производитель: Минск</span>
+            <span class="card-product__specifications">Мощность: 1350Вт</span>
+            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
+            <span class="card-product__specifications">Вес: 2,6кг</span>
+          </p>
+          <footer class="card-product__footer">
+            <span class="card-product__price">3270890 руб.</span>
+            <button class="card-product_buy-button">Купить</button>
+          </footer>
+        </section> <!--end of card-product-->
+
+        <section class="card-product">
+          <div class="card-product__image"></div>
+          <h2 class="card-product__header">
+            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+          </h2>
+          <p class="card-product__description">
+            <span class="card-product__specifications">Производитель: Минск</span>
+            <span class="card-product__specifications">Мощность: 1350Вт</span>
+            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
+            <span class="card-product__specifications">Вес: 2,6кг</span>
+          </p>
+          <footer class="card-product__footer">
+            <span class="card-product__price">3270890 руб.</span>
+            <button class="card-product_buy-button">Купить</button>
+          </footer>
+        </section> <!--end of card-product-->
+
+        <section class="card-product">
+          <div class="card-product__image"></div>
+          <h2 class="card-product__header">
+            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+          </h2>
+          <p class="card-product__description">
+            <span class="card-product__specifications">Производитель: Минск</span>
+            <span class="card-product__specifications">Мощность: 1350Вт</span>
+            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
+            <span class="card-product__specifications">Вес: 2,6кг</span>
+          </p>
+          <footer class="card-product__footer">
+            <span class="card-product__price">3270890 руб.</span>
+            <button class="card-product_buy-button">Купить</button>
+          </footer>
+        </section> <!--end of card-product-->
 
       </div> <!--end of goods-->
     </div> <!--end of container-->
