table view of product cards fixed

--- a/src/index.html
+++ b/src/index.html
@@ -188,7 +188,15 @@
       <div id="ghost-menu__view-tables" class="ghost-menu__view-tables"></div>
     </div>
 
+
+
     <div class="container">
+
+      <form action="" class="edit-name">
+        <p class="edit-name__label">Измените название товара и чтобы применить изменения нажмите кнопку "Готово"</p>
+        <input id="" type="text" class="edit-name__input-field">
+        <button type="submit" class="edit-name__submit-btn">Готово</button>
+      </form>
       <div class="goods">
 
         <section class="card-product">
@@ -448,5 +456,7 @@
 
       </div> <!--end of goods-->
     </div> <!--end of container-->
+
+
   </body>
 </html>
